@@ -12,6 +12,9 @@ Changes in 0.62.4:
     and use that when getting troves through the changeset trove source
   * Dependency resolution could cause duplicate trovesource entries
   * :lib and :devellib automatically have lib=%(lib)s install buckets
+  * Fixed a bug when managing users in a repository.  If you deleted a group
+    followed by the user with the same name of the group, an exception
+    was raised.
 
 Changes in 0.62.3:
   * Don't link troves to groups when the branch has changed
